# meteo-forecasting

./: Makefile  README.md  environment.yml  pyproject.toml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
forecasting/: config.py  plots.py  validation.py
forecasting/modeling/: evaluation.py  predict.py  tuning.py
notebooks/: meteo_forecasting.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/199871303143322839/: meta.yaml
notebooks/mlruns/199871303143322839/05dc408ade304523aa10e124531134a8/: meta.yaml
notebooks/mlruns/199871303143322839/0ad878237f724ab1aa1315cf16897df8/: meta.yaml
notebooks/mlruns/199871303143322839/0c807d6083b54a2e9035d60d125a089d/: meta.yaml
notebooks/mlruns/199871303143322839/0c9fb687196341469a7c6efdd0c1a9c0/: meta.yaml
notebooks/mlruns/199871303143322839/0cb244dcbb3141d0a9b16d8baf07d587/: meta.yaml
notebooks/mlruns/199871303143322839/0e1ec8c1449b4c728d5f6fdd2e8a64d7/: meta.yaml
notebooks/mlruns/199871303143322839/0f0da6bdbba544cabea705863e99367f/: meta.yaml
notebooks/mlruns/199871303143322839/14287930ec1d4897be2bdf9f54fa1118/: meta.yaml
notebooks/mlruns/199871303143322839/1715771deac040f5bb6f4aa876dcf1b5/: meta.yaml
notebooks/mlruns/199871303143322839/1ad349bb93eb4b9e9c7ece8e7ccbf192/: meta.yaml
notebooks/mlruns/199871303143322839/1c5e9a736b6a4ac09622084d1407a973/: meta.yaml
notebooks/mlruns/199871303143322839/1ea1756b88e2417b83b9860ba76d05d3/: meta.yaml
notebooks/mlruns/199871303143322839/213af417a38d4ba1942114f5cbc33ece/: meta.yaml
(+328 files in other folders)
